:bug: dark mode banner char hover color

--- a/source/css/_global/dark.styl
+++ b/source/css/_global/dark.styl
@@ -29,6 +29,7 @@ $banner-char-bg-color = black;
 
   &:hover {
     color: $banner-char-bg-color;
+    background-color: var(--banner-char-color);
   }
 }
 
